add Exclamation Point to desktop veiw

--- a/index.html
+++ b/index.html
@@ -75,9 +75,12 @@ Much as <span class="blueText">$101,000 in Profit</span>.”
         </div>
     </div>
     </div>
-    <h3 id="pinkBox" class="arial">
+    <div id="pinkBox">
+    <img src="https://d13p2xj50zkyqm.cloudfront.net/promos/AF/RGS/RGS_Hotlist_0617/RGS_Hotlist_0617_Warning.png" alt="N/a">
+    <h3 class="arial">
         WARNING: SPACE IS LIMITED & THESE LIVE TRAININGS ALWAYS FILL UP
     </h3>
+    </div>
     <p class="darkblueBox" class="lato">Claim your spot below before it's too late!</p>
     <div class="arrowDown"></div>
     <div>
